aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jeq__tests__jeq_lit_var.snap
---
source: aya-assembly/src/parser/instructions/jeq.rs
expression: result
---
Instruction(
    JeqLit(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 7,
                    end: 11,
                },
            ),
        ),
        Var(
            ByteOffset {
                start: 15,
                end: 18,
            },
        ),
    ),
)
