aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jeq__tests__jeq_reg_expr.snap
---
source: aya-assembly/src/parser/instructions/jeq.rs
expression: result
---
Instruction(
    JeqReg(
        Address(
            BinaryOp {
                lhs: HexLiteral(
                    ByteOffset {
                        start: 7,
                        end: 11,
                    },
                ),
                operator: Add,
                rhs: Register(
                    ByteOffset {
                        start: 14,
                        end: 16,
                    },
                ),
            },
        ),
        Register(
            ByteOffset {
                start: 19,
                end: 21,
            },
        ),
    ),
)
